--- a/src/Editor/Editor.scss
+++ b/src/Editor/Editor.scss
@@ -7,6 +7,7 @@
   padding: 0px 40px 0px 40px;
   height: 100%;
   overflow: scroll;
+  font-family: "Robot-Regular";
 }
 .todo{
   padding: 40px;
@@ -42,6 +43,8 @@
   width: fit-content;
   resize: none;
   width: 300px;
+  font-family: "Roboto-Regular";
+
 }
 .posSendButton{
   position: absolute;
@@ -52,5 +55,20 @@
     cursor: pointer;
 
   }
+
+}
+
+.posDate{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.dateOrganization{
+  width: fit-content;
+  height: fit-content;
+  font-family: "Roboto-Regular";
+  background-color: #95E6C8;
+  border: 5px solid #95E6C8;
+  border-radius: 6px;
 
 }
