--- a/src/Editor/Editor.scss
+++ b/src/Editor/Editor.scss
@@ -38,9 +38,8 @@
 .textBox{
   padding: 5px;
   background-color: #A9FFDA;
-  resize:horizontal;
   border: 0;
-  width: fit-content;
+  height: 38px;
   resize: none;
   width: 300px;
   font-family: "Roboto-Regular";
