--- a/src/Mostrador/Mostrador.css
+++ b/src/Mostrador/Mostrador.css
@@ -28,7 +28,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
