--- a/src/Editor/MsgBox.scss
+++ b/src/Editor/MsgBox.scss
@@ -32,4 +32,6 @@
     box-shadow: 0px 4px 4px rgba($color: #000000, $alpha: 0.25);
     font-family: "Roboto-Regular";
     font-size: 15px;
+    max-width: 80vw;
+    word-break: break-all;
 }
