--- a/src/Editor/Editor.scss
+++ b/src/Editor/Editor.scss
@@ -30,6 +30,7 @@
   background-color: #5E8D7C;
   width: inherit;
   padding: 15px 0px 15px 0px;
+  height: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
