--- a/src/Mostrador/Mostrador.css
+++ b/src/Mostrador/Mostrador.css
@@ -22,6 +22,9 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+
+  position: relative;
+  z-index: 20;
 }
 
 #posTitulo{
@@ -33,6 +36,7 @@
   justify-content: center;
   align-items: center;
   height: 90vh;
+  z-index: 10;
 
 }
 
