correção de warning

--- a/src/basico/Navbar.scss
+++ b/src/basico/Navbar.scss
@@ -61,7 +61,7 @@ ul{
     color: black;
     width: 250px;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     flex-direction:column;
 
 }
