--- a/src/Editor/Editor.scss
+++ b/src/Editor/Editor.scss
@@ -61,19 +61,7 @@
 
 }
 
-#posTagButton{
-  position: absolute;
-  left: 5%;
-  background-color: #A9FFDA;
-  button{
-    padding: 5px 9px;
-    background-color: transparent;
-    border: 0;
-    cursor: pointer;
 
-  }
-
-}
 
 
 .posDate{
@@ -157,7 +145,6 @@
   padding: 2px 5px;
   height: fit-content;
 }
-
 #showing_tags{
   display: none;
   position: absolute;
@@ -165,6 +152,40 @@
   background-color: #A9FFDA;
   height: 90px;
   width: 200px;
+}
+
+
+#posTagButton{
+  position: absolute;
+  left: 5%;
+  background-color: #A9FFDA;
+  button{
+    padding: 5px 9px;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+  }
+
+  &:hover > #showing_tags{
+    display: flex;
+  }
+}
+
+
+#showing_tags:hover{
+  display: flex;
+}
+
+.hide {
+  display: none;
+}
+.hide:hover {
+  display: block;
+}
+    
+.myDIV:hover + .hide {
+  display: block;
+  color: red;
 }
 
 #organizacao_tags{
