estilo select tags

--- a/src/Editor/Editor.scss
+++ b/src/Editor/Editor.scss
@@ -138,6 +138,32 @@
   display: flex;
   justify-content:space-between;
   padding: 5px 0;
+  align-items:flex-start;
+  select{
+    border: 2px #5E8D7C solid;
+    background-color: white;
+    color: black;
+    padding: 3px 5px;
+  }
+  div{
+  
+    display: flex;
+    align-content:flex-start;
+    flex-direction: column;
+    button{
+      margin: 6px 5px;
+      background-color: #5E8D7C;
+      color: white;
+      border: 2px #95E6C8 solid;
+      cursor: pointer;
+      padding: 3px 6px
+    }
+  }
+}
+
+#select_tag{
+  height: fit-content;
+  margin: 6px 0;
 }
 
 .tag_style{
