change chat color

--- a/src/Mostrador/Mostrador.scss
+++ b/src/Mostrador/Mostrador.scss
@@ -32,23 +32,17 @@
 
 
 .minus-button-chat{
-  display: none;
   background-color: black;
   color: white;
-  position: absolute;
-  right: -20px;
   border: 0;
-  top: 0px;
   height: 20px;
   width: 20px;
   align-items: center;
   justify-content: center;
   font-size: 16px;
   z-index: 3;
+  margin-right: 1px;
   cursor: pointer;
-  &:hover{
-    display: flex;
-  }
 }
 
 .divTextCaracteristics{
@@ -71,11 +65,85 @@
   margin-right: 50px;
   margin-top: 20px;
   margin-bottom: 20px;
-  &:hover > .minus-button-chat{
+  &:hover > .buttons{
     display: flex;
   }
 }
 
+.buttons{
+  
+  display: none;
+  position: absolute;
+  flex-direction: row;
+  right: -41px;
+  top: 0px;
+  &:hover{
+    display: flex;
+  }
+}
+
+
+
+.page_modal_chat_edit{
+  font-family: "Roboto-Regular";
+  display: none;
+  opacity: 1;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  right: 0;  
+  justify-content: center;
+  align-items: center;
+  z-index: 80;
+}
+#back_modal_criar_chat{
+  opacity: 0.4;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;  
+  background-color: black;
+  z-index: 90;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal_criar_chat{
+  background-color: #A9FFDA;
+  opacity: 1;
+  z-index: 100;
+  padding: 7px 20px;
+  color: black;
+  width: 250px;
+  display: flex;
+  align-items: flex-end;
+  flex-direction:column;
+
+}
+
+#modal_criar_chat_input{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  width: 100%;
+  
+}
+#modal_criar_chat_button{
+  width: fit-content;
+}
+
+input:focus{
+  outline: 2px solid black;
+}
+
+input:valid{
+  border: 3px solid green;
+}
+input:invalid{
+  border: 3px solid red;
+}
 @media screen and (max-width: 600px) {
   .divTextCaracteristics{
     margin: 0;
