--- a/src/basico/Navbar.scss
+++ b/src/basico/Navbar.scss
@@ -63,7 +63,7 @@
     align-items: center;
     z-index: 80;
 }
-#back_modal_criar_chat{
+#back-modal-criar-chat{
     opacity: 0.4;
     width: 100vw;
     height: 100vh;
@@ -76,7 +76,7 @@
     align-items: center;
 }
 
-#modal_criar_chat{
+#modal-criar-chat{
     background-color: #A9FFDA;
     opacity: 1;
     z-index: 100;
